# command-line-interpreter

./: .gitignore  CMakeLists.txt  batchtest.txt  config.h  main.cpp  terminal.cpp  terminal.h  terminal.hpp  test.txt  ulazDobar.txt  ulazLos.txt
CommandClasses/: batchcommand.cpp  batchcommand.h  batchcommand.hpp  command.cpp  command.h  command.hpp  datecommand.cpp  datecommand.h  datecommand.hpp  echocommand.cpp  echocommand.h  echocommand.hpp  exitcommand.cpp  exitcommand.h  exitcommand.hpp  headcommand.cpp  headcommand.h  headcommand.hpp  promptcommand.cpp  promptcommand.h  promptcommand.hpp  rmcommand.cpp  rmcommand.h  rmcommand.hpp  timecommand.cpp  timecommand.h  timecommand.hpp  touchcommand.cpp  touchcommand.h  touchcommand.hpp  trcommand.cpp  trcommand.h  trcommand.hpp  trunicatecommand.cpp  trunicatecommand.h  trunicatecommand.hpp  wccommand.cpp  wccommand.h  wccommand.hpp
ExceptionClasses/: exception.h  exception.hpp
FileClasses/: fileoperator.h
HelperClasses/: iohandler.h  iohelper.cpp  iohelper.h  iohelper.hpp  iointerface.h  parser.cpp  parser.h  token.h  tokenchecker.cpp  tokenchecker.h
ParserClasses/: parser.cpp  parser.h  parser.hpp  pipelineparser.cpp  pipelineparser.h  pipelineparser.hpp  validitychecker.cpp  validitychecker.h  validitychecker.hpp
StreamClasses/InStream/: arginstream.cpp  arginstream.h  arginstream.hpp  commandinstream.cpp  commandinstream.h  commandinstream.hpp  fileinstream.cpp  fileinstream.h  fileinstream.hpp  inputstream.cpp  inputstream.h  inputstream.hpp  stdinstream.h  stdinstream.hpp
StreamClasses/OutStream/: commandoutstream.cpp  commandoutstream.h  commandoutstream.hpp  fileoutstream.h  fileoutstream.hpp  outstream.cpp  outstream.h  outstream.hpp  stdoutstream.h  stdoutstream.hpp
TokenClasses/: argumenttoken.cpp  argumenttoken.h  argumenttoken.hpp  commandtoken.cpp  commandtoken.h  commandtoken.hpp  optiontoken.cpp  optiontoken.h  optiontoken.hpp  redirecttoken.cpp  redirecttoken.h  redirecttoken.hpp  token.cpp  token.h  token.hpp
testFiles/: novifajl
